// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewTable::Header default view displays 1`] = `
<div
  class="component"
>
  <div
    class="d-flex flex-grow"
  >
    <div
      class="flex-grow mr-2 titleWrapper"
    >
      <div
        class="title editable"
        color="transparent"
      >
        <span>
          New & Open Tickets
        </span>
        <i
          class="material-icons"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div
      class="d-flex"
    >
      <div
        class="component headerSearch mr-2"
      >
        <div
          class="wrapper input"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-7"
            name="input-text-7"
            placeholder="Search tickets..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewTable::Header default view get search query from active view 1`] = `
<div
  class="component"
>
  <div
    class="d-flex flex-grow"
  >
    <div
      class="flex-grow mr-2 titleWrapper"
    >
      <div
        class="title editable"
        color="transparent"
      >
        <span>
          New & Open Tickets
        </span>
        <i
          class="material-icons"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div
      class="d-flex"
    >
      <div
        class="component headerSearch mr-2"
      >
        <div
          class="wrapper input"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-11"
            name="input-text-11"
            placeholder="Search tickets..."
            type="text"
            value="term1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewTable::Header emoji picker .render() should not render emoji if decoration is not an object 1`] = `
<div
  class="component"
>
  <div
    class="d-flex flex-grow"
  >
    <div
      class="flex-grow mr-2 titleWrapper"
    >
      <div
        class="titleWrapper"
      >
        <div
          class="wrapper component edit-mode"
        >
          <input
            class="input title withEmojiPicker input edit-mode"
            id="input-text-14"
            name="input-text-14"
            placeholder="View name"
            tabindex="1"
            type="text"
            value="New & Open Tickets"
          />
        </div>
        <div
          class="picker emojiPicker"
        >
          <span
            class="material-icons empty icon"
          >
            insert_emoticon
          </span>
        </div>
        <img
          alt="close-icon"
          class="closeEditIcon"
          src="test-file-stub"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewTable::Header emoji picker .render() should not render emoji if decoration.emoji is not a string 1`] = `
<div
  class="component"
>
  <div
    class="d-flex flex-grow"
  >
    <div
      class="flex-grow mr-2 titleWrapper"
    >
      <div
        class="titleWrapper"
      >
        <div
          class="wrapper component edit-mode"
        >
          <input
            class="input title withEmojiPicker input edit-mode"
            id="input-text-15"
            name="input-text-15"
            placeholder="View name"
            tabindex="1"
            type="text"
            value="New & Open Tickets"
          />
        </div>
        <div
          class="picker emojiPicker"
        >
          <span
            class="material-icons empty icon"
          >
            insert_emoticon
          </span>
        </div>
        <img
          alt="close-icon"
          class="closeEditIcon"
          src="test-file-stub"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewTable::Header emoji picker .render() should render emoji if decoration.emoji is a string 1`] = `
<div
  class="component"
>
  <div
    class="d-flex flex-grow"
  >
    <div
      class="flex-grow mr-2 titleWrapper"
    >
      <div
        class="titleWrapper"
      >
        <div
          class="wrapper component edit-mode"
        >
          <input
            class="input title withEmojiPicker input edit-mode"
            id="input-text-13"
            name="input-text-13"
            placeholder="View name"
            tabindex="1"
            type="text"
            value="New & Open Tickets"
          />
        </div>
        <div
          class="picker emojiPicker"
        >
          <span
            class="icon"
          >
            foo
          </span>
        </div>
        <img
          alt="close-icon"
          class="closeEditIcon"
          src="test-file-stub"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewTable::Header emoji picker emoji select should not override existing decoration object properties 1`] = `
[
  Immutable.Map {
    "search": null,
    "order_by": "updated",
    "deactivated_datetime": null,
    "name": "New & Open Tickets",
    "slug": "new-&-open-tickets",
    "uri": "/api/views/7/",
    "editMode": true,
    "decoration": Immutable.Map {
      "foo": "bar",
      "emoji": "👍",
    },
    "created_datetime": "2017-07-31T21:43:10.610368+00:00",
    "visibility": "public",
    "section_id": null,
    "group_by": null,
    "fields": Immutable.List [
      "details",
      "tags",
      "customer",
      "created",
    ],
    "type": "ticket-list",
    "id": 7,
    "filters": "neq(ticket.status, "closed")",
    "order_dir": "desc",
    "filters_ast": Immutable.Map {
      "sourceType": "script",
      "loc": Immutable.Map {
        "start": Immutable.Map {
          "column": 0,
          "line": 1,
        },
        "end": Immutable.Map {
          "column": 28,
          "line": 1,
        },
      },
      "type": "Program",
      "body": Immutable.List [
        Immutable.Map {
          "loc": Immutable.Map {
            "start": Immutable.Map {
              "column": 0,
              "line": 1,
            },
            "end": Immutable.Map {
              "column": 28,
              "line": 1,
            },
          },
          "type": "ExpressionStatement",
          "expression": Immutable.Map {
            "arguments": Immutable.List [
              Immutable.Map {
                "object": Immutable.Map {
                  "type": "Identifier",
                  "loc": Immutable.Map {
                    "start": Immutable.Map {
                      "column": 4,
                      "line": 1,
                    },
                    "end": Immutable.Map {
                      "column": 10,
                      "line": 1,
                    },
                  },
                  "name": "ticket",
                },
                "property": Immutable.Map {
                  "type": "Identifier",
                  "loc": Immutable.Map {
                    "start": Immutable.Map {
                      "column": 11,
                      "line": 1,
                    },
                    "end": Immutable.Map {
                      "column": 17,
                      "line": 1,
                    },
                  },
                  "name": "status",
                },
                "loc": Immutable.Map {
                  "start": Immutable.Map {
                    "column": 4,
                    "line": 1,
                  },
                  "end": Immutable.Map {
                    "column": 17,
                    "line": 1,
                  },
                },
                "type": "MemberExpression",
                "computed": false,
              },
              Immutable.Map {
                "value": "closed",
                "loc": Immutable.Map {
                  "start": Immutable.Map {
                    "column": 19,
                    "line": 1,
                  },
                  "end": Immutable.Map {
                    "column": 27,
                    "line": 1,
                  },
                },
                "type": "Literal",
                "raw": ""closed"",
              },
            ],
            "callee": Immutable.Map {
              "type": "Identifier",
              "loc": Immutable.Map {
                "start": Immutable.Map {
                  "column": 0,
                  "line": 1,
                },
                "end": Immutable.Map {
                  "column": 3,
                  "line": 1,
                },
              },
              "name": "neq",
            },
            "loc": Immutable.Map {
              "start": Immutable.Map {
                "column": 0,
                "line": 1,
              },
              "end": Immutable.Map {
                "column": 28,
                "line": 1,
              },
            },
            "type": "CallExpression",
          },
        },
      ],
    },
    "category": null,
  },
]
`;

exports[`ViewTable::Header emoji picker emoji select should update decoration.emoji on emoji select 1`] = `
[
  Immutable.Map {
    "search": null,
    "order_by": "updated",
    "deactivated_datetime": null,
    "name": "New & Open Tickets",
    "slug": "new-&-open-tickets",
    "uri": "/api/views/7/",
    "editMode": true,
    "decoration": Immutable.Map {
      "emoji": "👍",
    },
    "created_datetime": "2017-07-31T21:43:10.610368+00:00",
    "visibility": "public",
    "section_id": null,
    "group_by": null,
    "fields": Immutable.List [
      "details",
      "tags",
      "customer",
      "created",
    ],
    "type": "ticket-list",
    "id": 7,
    "filters": "neq(ticket.status, "closed")",
    "order_dir": "desc",
    "filters_ast": Immutable.Map {
      "sourceType": "script",
      "loc": Immutable.Map {
        "start": Immutable.Map {
          "column": 0,
          "line": 1,
        },
        "end": Immutable.Map {
          "column": 28,
          "line": 1,
        },
      },
      "type": "Program",
      "body": Immutable.List [
        Immutable.Map {
          "loc": Immutable.Map {
            "start": Immutable.Map {
              "column": 0,
              "line": 1,
            },
            "end": Immutable.Map {
              "column": 28,
              "line": 1,
            },
          },
          "type": "ExpressionStatement",
          "expression": Immutable.Map {
            "arguments": Immutable.List [
              Immutable.Map {
                "object": Immutable.Map {
                  "type": "Identifier",
                  "loc": Immutable.Map {
                    "start": Immutable.Map {
                      "column": 4,
                      "line": 1,
                    },
                    "end": Immutable.Map {
                      "column": 10,
                      "line": 1,
                    },
                  },
                  "name": "ticket",
                },
                "property": Immutable.Map {
                  "type": "Identifier",
                  "loc": Immutable.Map {
                    "start": Immutable.Map {
                      "column": 11,
                      "line": 1,
                    },
                    "end": Immutable.Map {
                      "column": 17,
                      "line": 1,
                    },
                  },
                  "name": "status",
                },
                "loc": Immutable.Map {
                  "start": Immutable.Map {
                    "column": 4,
                    "line": 1,
                  },
                  "end": Immutable.Map {
                    "column": 17,
                    "line": 1,
                  },
                },
                "type": "MemberExpression",
                "computed": false,
              },
              Immutable.Map {
                "value": "closed",
                "loc": Immutable.Map {
                  "start": Immutable.Map {
                    "column": 19,
                    "line": 1,
                  },
                  "end": Immutable.Map {
                    "column": 27,
                    "line": 1,
                  },
                },
                "type": "Literal",
                "raw": ""closed"",
              },
            ],
            "callee": Immutable.Map {
              "type": "Identifier",
              "loc": Immutable.Map {
                "start": Immutable.Map {
                  "column": 0,
                  "line": 1,
                },
                "end": Immutable.Map {
                  "column": 3,
                  "line": 1,
                },
              },
              "name": "neq",
            },
            "loc": Immutable.Map {
              "start": Immutable.Map {
                "column": 0,
                "line": 1,
              },
              "end": Immutable.Map {
                "column": 28,
                "line": 1,
              },
            },
            "type": "CallExpression",
          },
        },
      ],
    },
    "category": null,
  },
]
`;

exports[`ViewTable::Header empty view 1`] = `
<div
  class="component"
>
  <div
    class="d-flex flex-grow"
  >
    <div
      class="flex-grow mr-2 titleWrapper"
    >
      <div
        class="title editable"
        color="transparent"
      >
        <span>
          
        </span>
        <i
          class="material-icons"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div
      class="d-flex"
    >
      <div
        class="component headerSearch mr-2"
      >
        <div
          class="wrapper input"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-1"
            name="input-text-1"
            placeholder="Search tickets..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewTable::Header search view 1`] = `
<div
  class="component"
>
  <div
    class="d-flex flex-grow"
  >
    <div
      class="d-flex flex-grow"
    >
      <div
        class="component headerSearch mr-2 isSearching flex-grow"
      >
        <div
          class="wrapper isFocused input"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-2"
            name="input-text-2"
            placeholder="Search tickets..."
            type="text"
            value="term1"
          />
        </div>
      </div>
      <a
        to="/app/tickets"
      >
        <i
          class="closeIcon material-icons d-none d-md-inline-block"
          id="leave-search-mode"
        >
          close
        </i>
      </a>
    </div>
  </div>
</div>
`;

exports[`ViewTable::Header should not render unfocused search input when spotlight is enabled 1`] = `
<div
  class="component"
>
  <div
    class="d-flex flex-grow"
  >
    <div
      class="flex-grow mr-2 titleWrapper"
    >
      <div
        class="title editable"
        color="transparent"
      >
        <span>
          
        </span>
        <i
          class="material-icons"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div
      class="d-flex"
    />
  </div>
</div>
`;

exports[`ViewTable::Header should render search with search term location when spotlight is enabled 1`] = `
<div
  class="component"
>
  <div
    class="d-flex flex-grow"
  >
    <div
      class="d-flex flex-grow"
    >
      <div
        class="component headerSearch mr-2 isSearching flex-grow"
      >
        <div
          class="wrapper isFocused input"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-3"
            name="input-text-3"
            placeholder="Search tickets..."
            type="text"
            value="term1"
          />
        </div>
      </div>
      <a
        to="/app/tickets"
      >
        <i
          class="closeIcon material-icons d-none d-md-inline-block"
          id="leave-search-mode"
        >
          close
        </i>
      </a>
    </div>
  </div>
</div>
`;

exports[`ViewTable::Header should render when view is in edit mode 1`] = `
<div
  class="component"
>
  <div
    class="d-flex flex-grow"
  >
    <div
      class="flex-grow mr-2 titleWrapper"
    >
      <div
        class="titleWrapper"
      >
        <div
          class="wrapper component edit-mode"
        >
          <input
            class="input title withEmojiPicker input edit-mode"
            id="input-text-4"
            name="input-text-4"
            placeholder="View name"
            tabindex="1"
            type="text"
            value="New & Open Tickets"
          />
        </div>
        <div
          class="picker emojiPicker"
        >
          <span
            class="material-icons empty icon"
          >
            insert_emoticon
          </span>
        </div>
        <img
          alt="close-icon"
          class="closeEditIcon"
          src="test-file-stub"
        />
      </div>
    </div>
  </div>
</div>
`;
